--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular-eslint/template-parser": "17.1.1",
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
@@ -45,6 +46,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.6",
     "typescript": "~5.2.2"
